--- a/index.html
+++ b/index.html
@@ -1,127 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CityBlocks.com</title>
-<style>
-  :root{ --bg:#000; --fg:#fff; --cta:#ffcc00; }
-  *{box-sizing:border-box}
-  html,body{height:100%;margin:0}
-  body{background:var(--bg);color:var(--fg);font-family:"Helvetica Neue",Arial,sans-serif;overflow:hidden;}
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CityBlocks.com — Build the Next World</title>
+  <meta name="description" content="CityBlocks.com — Build the Next World. A metaverse engine and platform concept. Inquire for acquisition or partnership.">
+  <meta name="theme-color" content="#0b0b0b">
+  <style>
+    :root{
+      --bg:#0b0b0b; --fg:#ffffff; --muted:#b9c0cb; --accent:#ffd24d; --shadow:0 10px 30px rgba(0,0,0,.45);
+      --radius:16px; --gap:clamp(10px,2vw,20px); --maxW:1200px;
+    }
+    *,*::before,*::after{ box-sizing:border-box; }
+    html,body{ height:100%; margin:0; }
+    body{ background:var(--bg); color:var(--fg); font:400 16px/1.5 system-ui,-apple-system,Segoe UI,Inter,Roboto,Arial,sans-serif; overflow:hidden; }
+    a{ color:inherit; text-decoration:none; }
+    img,video{ max-width:100%; display:block; }
 
-  /* ---------- INTRO (centered with 100svh for iOS) ---------- */
-  #intro{
-    position:fixed; inset:0; z-index:10; background:var(--bg);
-    display:grid; place-items:center; /* centers both axes */
-    min-height:100svh; /* iOS-friendly viewport height */
-  }
-  .intro-inner{
-    display:flex; flex-direction:column; align-items:center; gap:.6rem;
-    text-align:center;
-  }
-  #introWord{
-    font-weight:900; letter-spacing:.06em; line-height:1.05; margin:0;
-    filter: drop-shadow(0 6px 20px rgba(0,0,0,.55));
-    opacity:1;
-  }
-  @media (min-width:900px){ #introWord{ font-size: clamp(56px, 9vw, 136px); } }
-  @media (max-width:899px){ #introWord{ font-size: clamp(36px, 10vw, 64px); } }
+    /* ===== INTRO OVERLAY ===== */
+    #intro{ position:fixed; inset:0; display:grid; place-items:center; background:var(--bg); z-index:9999; }
+    .intro-inner{ display:flex; flex-direction:column; align-items:center; gap:3.5rem; text-align:center; }
+    #introLogo{ width:min(44vw,520px); filter: drop-shadow(0 8px 28px rgba(0,0,0,.6)); transition: transform .9s ease, opacity .6s ease; }
+    #tagline{ font-weight:800; letter-spacing:.04em; line-height:1.08; opacity:.98; text-wrap:balance; }
+    #tagline span{ display:inline-block; opacity:0; transform:translateY(12px); animation:fadeIn .55s forwards; font-size:clamp(24px,4vw,52px); margin:.06em .18em; }
+    #tagline span:nth-child(1){animation-delay:.15s}
+    #tagline span:nth-child(2){animation-delay:.65s}
+    #tagline span:nth-child(3){animation-delay:1.15s}
+    #tagline span:nth-child(4){animation-delay:1.65s}
+    #tagline span:nth-child(5){animation-delay:2.15s}
+    #tagline span:nth-child(6){animation-delay:2.65s}
+    @keyframes fadeIn{ to{ opacity:1; transform:translateY(0) } }
+    body.ready #intro{ background:transparent; }
+    body.ready #introLogo{ transform: translateY(-44vh) scale(.24); opacity:.9; }
 
-  #introLogo{
-    width:min(44vw,520px); max-width:92vw;
-    filter: drop-shadow(0 8px 28px rgba(0,0,0,.6));
-  }
-  .intro-fade-out{ animation:introFade 700ms ease forwards; }
-  @keyframes introFade{ to{ opacity:0; visibility:hidden } }
+    /* ===== MAIN LAYOUT ===== */
+    main{ min-height:100svh; display:grid; place-items:center; padding:clamp(10px,2.4vw,26px); }
+    .quad{ width:min(96vw,var(--maxW)); display:grid; gap:var(--gap); }
+    .quad{ grid-template-columns:1fr; }
+    @media (min-width:820px){ .quad{ grid-template-columns:1fr 1fr; grid-auto-rows:min(35vh,38svh); } }
 
-  /* ---------- QUADRANTS ---------- */
-  #app{
-    position:fixed; inset:0; z-index:1;
-    display:grid; grid-template-columns:1fr 1fr; grid-template-rows:1fr 1fr;
-    opacity:0; transition:opacity .8s ease;
-  }
-  .tile{ position:relative; overflow:hidden; outline:1px solid rgba(255,255,255,.05); }
-  .tile img{ width:100%; height:100%; object-fit:cover; display:block;
-             transform:scale(1); transition:transform .4s ease; }
-  .tile:hover img{ transform:scale(1.06); }
-  .label{
-    position:absolute; left:12px; bottom:12px; background:rgba(0,0,0,.55);
-    padding:.45rem .7rem; border-radius:8px; font-weight:800;
-    font-size:clamp(12px,1.6vw,16px);
-  }
+    .tile{ position:relative; overflow:hidden; border-radius:var(--radius); box-shadow:var(--shadow); isolation:isolate; }
+    .tile img,.tile video{ width:100%; height:100%; object-fit:cover; }
+    .tile video{ position:absolute; inset:0; opacity:0; transition:opacity .25s ease; pointer-events:none; }
+    .tile:hover video{ opacity:1; }
+    @media (prefers-reduced-motion:reduce){ .tile:hover video{ opacity:0; } }
 
-  /* ---------- CTA ---------- */
-  #inquire{ position:fixed; right:18px; bottom:18px; z-index:2; opacity:0; transition:opacity .8s ease; }
-  #inquire button{
-    background:var(--cta); color:#111; border:0; padding:.7rem 1rem; border-radius:10px;
-    font-weight:800; font-size:clamp(14px,1.6vw,16px); cursor:pointer;
-    box-shadow:0 8px 24px rgba(0,0,0,.35);
-    animation:pulse 2.6s ease-in-out infinite 1.2s;
-  }
-  #inquire button:hover{ filter:brightness(1.06); }
-  @keyframes pulse{
-    0%{ box-shadow:0 0 0 0 rgba(255,204,0,.5) }
-    60%{ box-shadow:0 0 0 22px rgba(255,204,0,0) }
-    100%{ box-shadow:0 0 0 0 rgba(255,204,0,0) }
-  }
+    .label{ position:absolute; left:12px; bottom:12px; padding:.5em .75em; border-radius:999px; background:rgba(0,0,0,.55); color:#fff; font-weight:700; font-size:clamp(12px,1.6vw,16px); backdrop-filter:saturate(120%) blur(6px); }
 
-  /* mobile: stack quadrants */
-  @media (max-width:700px){
-    #app{ grid-template-columns:1fr; grid-template-rows:repeat(4, 25vh); }
-  }
-</style>
+    /* Inquire CTA */
+    .cta-wrap{ width:min(96vw,var(--maxW)); margin:var(--gap) auto 0; display:flex; justify-content:flex-end; }
+    #inquire{ appearance:none; border:0; border-radius:999px; padding:.9em 1.15em; font-weight:800; cursor:pointer; background:var(--accent); box-shadow:var(--shadow); }
+    #inquire:active{ transform:translateY(1px); }
+
+    /* Footer note */
+    footer{ opacity:.6; text-align:center; font-size:.85rem; padding:18px 0 28px; }
+
+    /* Safety: if JS disabled */
+    noscript .hide-when-noscript{ display:none !important; }
+  </style>
 </head>
 <body>
-
-<!-- INTRO -->
-<section id="intro" aria-hidden="false">
-  <div class="intro-inner">
-    <h1 id="introWord">CITYBLOCKS.COM</h1>
-    <img id="introLogo" src="CityBlocksLogo01.png" alt="CityBlocks Logo" />
+  <!-- ===== INTRO OVERLAY ===== -->
+  <div id="intro" class="hide-when-noscript">
+    <div class="intro-inner">
+      <!-- Replace with your logo asset path -->
+      <img id="introLogo" src="assets/logo-cityblocks.png" alt="CityBlocks logo" />
+      <div id="tagline" aria-label="Build Your Next World At CityBlocks dot com">
+        <span>Build</span><span>Your</span><span>Next</span><span>World</span><span>At</span><span>CityBlocks.com</span>
+      </div>
+    </div>
   </div>
-</section>
 
-<!-- QUADRANTS -->
-<main id="app" aria-hidden="true">
-  <figure class="tile">
-    <img src="1940s.png" alt="1940s World" />
-    <figcaption class="label">1940s</figcaption>
-  </figure>
-  <figure class="tile">
-    <img src="PresentDay.png" alt="Present Day World" />
-    <figcaption class="label">Present Day</figcaption>
-  </figure>
-  <figure class="tile">
-    <img src="Future.png" alt="Future World" />
-    <figcaption class="label">Future</figcaption>
-  </figure>
-  <figure class="tile">
-    <img src="HistoricPast.png" alt="Historic Past World" />
-    <figcaption class="label">Historic Past</figcaption>
-  </figure>
-</main>
+  <!-- ===== MAIN CONTENT ===== -->
+  <main>
+    <section class="quad" aria-label="World selection">
+      <!-- 1940s -->
+      <a class="tile" href="worlds/1940s/" id="era-1940s">
+        <img src="assets/1940s.jpg" alt="1940s city scene" loading="eager" />
+        <!-- Optional hover video (place file to enable) -->
+        <video muted preload="none" playsinline loop onmouseenter="this.play()" onmouseleave="this.pause()">
+          <source src="assets/1940s-hover.mp4" type="video/mp4" />
+        </video>
+        <span class="label">1940s</span>
+      </a>
 
-<!-- CTA -->
-<div id="inquire">
-  <button type="button" onclick="openInvestor()">Inquire Now</button>
-</div>
+      <!-- Present -->
+      <a class="tile" href="worlds/present/" id="era-present">
+        <img src="assets/present.jpg" alt="Present day city scene" />
+        <video muted preload="none" playsinline loop onmouseenter="this.play()" onmouseleave="this.pause()">
+          <source src="assets/present-hover.mp4" type="video/mp4" />
+        </video>
+        <span class="label">Present Day</span>
+      </a>
 
-<script>
-  // Fade intro out and reveal grid + CTA (3s hold)
-  setTimeout(() => {
-    document.getElementById('intro').classList.add('intro-fade-out');
-    document.getElementById('app').style.opacity = 1;
-    document.getElementById('inquire').style.opacity = 1;
-    document.getElementById('intro').setAttribute('aria-hidden','true');
-    document.getElementById('app').setAttribute('aria-hidden','false');
-  }, 3000);
+      <!-- Future -->
+      <a class="tile" href="worlds/future/" id="era-future">
+        <img src="assets/future.jpg" alt="Future city scene" />
+        <video muted preload="none" playsinline loop onmouseenter="this.play()" onmouseleave="this.pause()">
+          <source src="assets/future-hover.mp4" type="video/mp4" />
+        </video>
+        <span class="label">Future</span>
+      </a>
 
-  // Inquire: go to a webpage (investors.html) instead of a PDF
-  function openInvestor(){
-    window.location.href = 'investors.html';
-  }
-</script>
+      <!-- Historic Past -->
+      <a class="tile" href="worlds/historic/" id="era-historic">
+        <img src="assets/historic.jpg" alt="Historic classical city" />
+        <video muted preload="none" playsinline loop onmouseenter="this.play()" onmouseleave="this.pause()">
+          <source src="assets/historic-hover.mp4" type="video/mp4" />
+        </video>
+        <span class="label">Historic Past</span>
+      </a>
+    </section>
 
+    <div class="cta-wrap">
+      <button id="inquire" type="button" aria-label="Open investor one-sheet and start email">Inquire Now</button>
+    </div>
+  </main>
+
+  <footer>
+    <small>© 1997–2025 CityBlocks.com — Held since 1997. All rights reserved.</small>
+  </footer>
+
+  <noscript>
+    <style>#intro{display:none}</style>
+  </noscript>
+
+  <script>
+    // Intro sequence — respects reduced motion
+    const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    window.addEventListener('load', () => {
+      if(prefersReduced){
+        document.body.classList.add('ready');
+        document.getElementById('intro').style.display='none';
+        return;
+      }
+      // Reveal after tagline completes
+      setTimeout(() => document.body.classList.add('ready'), 3300);
+      setTimeout(() => {
+        const intro = document.getElementById('intro');
+        if(intro) intro.style.display='none';
+      }, 4300);
+    });
+
+    // Inquire flow — open PDF, then email
+    (function(){
+      const btn = document.getElementById('inquire');
+      if(!btn) return;
+      btn.addEventListener('click', async () => {
+        const pdfPath = 'Investor-One-Sheet.pdf'; // Put this file at repo root
+        // Open the investor sheet in a new tab
+        window.open(pdfPath, '_blank');
+        // Then prime an email
+        setTimeout(() => {
+          window.location.href = 'mailto:cityblocks@icloud.com?subject=CityBlocks.com%20Inquiry&body=Hi%2C%20I%27d%20like%20to%20discuss%20CityBlocks.com.';
+        }, 700);
+      });
+    })();
+
+    // Lightweight runtime check for common 404 path mistakes (logs only)
+    (function(){
+      const base = document.baseURI;
+      if(base.includes('github.io') && location.hostname !== 'cityblocks.com'){
+        console.log('[CityBlocks] Dev mode on GitHub Pages subdomain. Ensure asset paths are relative, not absolute.');
+      }
+    })();
+  </script>
 </body>
 </html>
