--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CityBlocks.com — Build Your Next World</title>
-  <link rel="preload" href="assets/logo-cityblocks.png" as="image">
+  <link rel="preload" href="logo-cityblocks.png" as="image">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
