--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CityBlocks.com — Build Your Next World</title>
-  <link rel="preload" href="logo-cityblocks.png" as="image">
+  <link rel="preload" href="/logo-cityblocks.png" as="image">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -16,8 +16,8 @@
       <span class="word w2">Your</span>
       <span class="word w3">Next</span>
       <span class="word w4">World</span>
-      <span class="word w5">At</span>
-      <img class="word w6 logo" src="assets/logo-cityblocks.png" alt="CityBlocks logo" />
+      <span class="word w5">at</span>
+      <img class="word w6 logo" src="/logo-cityblocks.png" alt="CityBlocks logo" />
       <span class="word w7 domain">CityBlocks.com</span>
     </div>
   </div>
