--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- MAIN GRID -->
   <main id="grid" class="hidden">
     <a class="tile" id="era-40s" href="worlds/1940s/">
-      <img src="assets/1940s.jpg" alt="1940s" />
+      <img src="1940s.jpg" alt="1940s" />
       <video class="hover-vid" src="assets/1940s.mp4" muted loop playsinline></video>
       <span class="label">1940s</span>
     </a>
