--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CityBlocks.com — Build Your Next World</title>
-  <link rel="preload" href="/logo-cityblocks.png" as="image">
+
+  <!-- no leading slash -->
+  <link rel="preload" href="logo-cityblocks.png" as="image">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- INTRO SEQUENCE -->
   <div id="intro" aria-label="Intro animation">
     <div class="intro-words" aria-hidden="true">
       <span class="word w1">Build</span>
@@ -17,7 +17,10 @@
       <span class="word w3">Next</span>
       <span class="word w4">World</span>
       <span class="word w5">at</span>
-      <img class="word w6 logo" src="/logo-cityblocks.png" alt="CityBlocks logo" />
+
+      <!-- no leading slash -->
+      <img class="word w6 logo" src="logo-cityblocks.png" alt="CityBlocks logo" />
+
       <span class="word w7 domain">CityBlocks.com</span>
     </div>
   </div>
