--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>CityBlocks.com — Build Your Next World</title>
 
   <!-- no leading slash -->
-  <link rel="preload" href="logo-cityblocks.png" as="image">
+  <link rel="preload" href="CityBlocksLogo01.png" as="image">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -19,11 +19,8 @@
       <span class="word w5">at</span>
 
       <!-- no leading slash -->
-      <img class="word w6 logo" src="logo-cityblocks.png" alt="CityBlocks logo" />
-
-      <span class="word w7 domain">CityBlocks.com</span>
-    </div>
-  </div>
+     <img class="word w6 logo" src="CityBlocksLogo01.png" alt="CityBlocks logo">
+        </div>
 
   <!-- MAIN GRID -->
   <main id="grid" class="hidden">
